# tapapear

./: .gitignore  Resultato_test.json  commands_output.json  config.yaml  notas.txt  test_complex_store.json  test_simple_store.json  test_store_with_categories.json  test_store_with_products.json  x.json
common/: pyproject.toml
common/src/: a.json  actual.json  authorization.py  collection_test.py  config.yaml  console_exporter.py  decorator.py  decorator_test.py  dialect.py  dif.py  document_test.py  domain_trace.py  entity_with_id.py  http_test.py  mapper_text.py  mediator_trace.py  model.json  model_error.json  old.json  setup_tracing.py  telemtry.py  test_unit_of_work.py  tracker_compiler.py  tracker_test.py  tracker_test_add.py  tracker_test_remove.py
common/src/common/: __init__.py  authorization.py  autorization.py  dif.py  error.py  events.py  events2.py  ioc.py  ioc1.py  meidator1.py  test.py  test_context_var.py
common/src/common/confg/: __init__.py  config.py
common/src/common/context/: __init__.py  context.py
common/src/common/domain/: __init__.py  baseentity.py  events.py  valueobject.py
common/src/common/errors/: __init__.py  errors_response.py
common/src/common/exceptions/: __init__.py  _constants.py  _exception.py  _exceptions_test.py  _setup_exception_handlers.py  mediator.py
common/src/common/htto/: __init__.py  http_client.py
common/src/common/http/: __init__.py  http_client.py
common/src/common/inflect/: __init__.py  plural.py
common/src/common/infraestructure/: __init__.py  document.py  documentnotfound.py  firestore.py  firestore_util.py  repository.py  test.py
common/src/common/infrastructure/: __init__.py  agregate_root.py  change_tracker.py  changetracker.md  document.py  document_schema_generator.py  entity_decorator.py  firestore.py  repository.py  unit_of_work.py
common/src/common/ioc/: __init__.py  component.py  container.py  deps.py  inject.py  inject_dependencies.py
common/src/common/mapper/: __init__.py  mapper.py
common/src/common/mediator/: __init__.py  _command.py  _mediator.py  _pipelines.py  command.py
common/src/common/middelwares/: __init__.py  authmiddelware.py  errormiddelware.py
common/src/common/openapi/: __init__.py  build_error_responses.py  custom_openapi.py  featuremodel.py
common/src/common/security/: __init__.py  security.py
common/src/common/server/: __init__.py  appbuilder.py  build_router.py  custom_fastapi.py  empty_response.py  featrures.py  features.py  routers.py
common/src/common/telemetry/: __init__.py  config.py  consoledevexporter.py  consoleexporter.py  decorators.py  domaininstrumentor.py  trace.dev.md  treeconsoleexporter.py
common/src/common/util/: __init__.py  util.py
customers/: pyproject.toml
customers/src/: config.yaml  main.py  mediator_test.py
customers/src/customers/: main.py
customers/src/customers/domain/: __init__.py
customers/src/customers/domain/customer/: __init__.py  customer.py  schedule.py
customers/src/customers/features/customer/commands/: create.py  create_customer.py  remove.py  update.py
customers/src/customers/features/customer/events_handlers/: custom_create.py
customers/src/customers/features/customer/queries/: get.py
customers/src/customers/features/schedule/commands/: create.py
customers/src/customers/infraestructure/customer/: __init__.py  repository.py
customers/src/customers/infrastructure/customer/: repository.py
customers/src/customers/infrastructure/services/: __init__.py  _post.py
notes/: app_architecture_docs.md  changetracker.md  (+6 more)
users/: pyproject.toml
users/src/users/: main.py
(+10 files in other folders)
