[project]
name = "users"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Hurtado",email = "pedrohurt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common @ file:///C:/Users/Home/Documents/tapapear/common"
]

[tool.poetry]
packages = [{include = "users", from = "src"}]


[tool.poetry.dependencies]
common = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
